--- a/node_conf/qu4lity-cloud-bridge/package.json
+++ b/node_conf/qu4lity-cloud-bridge/package.json
@@ -24,7 +24,9 @@
     "mariadb": "^2.5.1",
     "method-override": "^3.0.0",
     "morgan": "^1.9.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sequelize": "^6.3.5",
+    "sequelize-auto": "^0.7.4"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
