--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
           - "3306:3306"
         volumes:
           - container-volume:/var/lib/mysql
-          - ./mariadb_conf/dump.sql:/docker-entrypoint-initdb.d/dump.sql
+          - ./mariadb_conf:/docker-entrypoint-initdb.d/
         environment:
           - MYSQL_ROOT_PASSWORD=r00t
 
